exports[`test toReactElements basic 1`] = `
<div>
  <span>
    a child
  </span>
</div>
`;

exports[`test toReactElements override text 1`] = `
<span>
  <span>
    <p
      data-foo="bar">
      a child
    </p>
  </span>
</span>
`;
